test/integration/bad/function-signatures/overloading/returntype_issues.stan
functions {
   real foo(int x){
     return 1.0;
   }

   int foo(int x){
     return 1;
   }
}
